Fix for bug 238807 (Compilation error in txXPathTreeWalker.h when building txXMLParser). r=Pike, sr=jst.