extensions/transformiix/source/xpath/txXPathTreeWalker.h
@@ -72,7 +72,7 @@ class nsIDOMDocument;
 class txXPathTreeWalker
 {
 public:
-    explicit txXPathTreeWalker(const txXPathTreeWalker& aOther);
+    txXPathTreeWalker(const txXPathTreeWalker& aOther);
     explicit txXPathTreeWalker(const txXPathNode& aNode);
     ~txXPathTreeWalker();
 
